# pvm

./: .env.example  .gitignore  README.md  SUBMISSION.md  hardhat.config.ts  index.html  package-lock.json  package.json
contracts/: README.md  hardhat.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
contracts/cache/: solidity-files-cache.json
contracts/contracts/: BasketManager.sol  XCMPrecompile.sol
contracts/interfaces/: IPVMEngine.sol  IXCMPrecompile.sol
contracts/scripts/: check-balance.ts  deploy-local.ts  deploy-xcm-precompile.ts  deploy.ts  fund-sovereign.ts  init-baskets.ts  test-deploy.ts  test-xcm-deposit.js  verify-sovereign.ts  verify-xcm.ts
contracts/tasks/: deploy.ts
docs/: CONTRACTS.md  FIXING_XCM.md  FRONTEND_FUNCTIONS.md  INTEGRATION.md  LOCAL_ONLY_MODE.md  PASEO_E2E_TESTING.md  POLKABASKET_IMPLEMENTATION_PLAN.md  PVM_INTEGRATION.md  STATUS.md  XCM_TESTING.md
pvm-engine/src/: lib.rs  rebalance.rs
rust/pvm-contract/: Cargo.toml  DEPLOY_FOUNDRY.md  Makefile  README.md  TEST_CONTRACT.md  contract.polkavm  package-lock.json  package.json
rust/pvm-contract/.cargo/: config.toml
rust/pvm-contract/scripts/: deploy.js
rust/pvm-contract/src/: main.rs
rust/pvm-engine/: Cargo.toml
scripts/: setup-env.js
src/: App.tsx  BasketPage.tsx
src/components/: AllocationChart.tsx  DepositForm.tsx  Navbar.tsx  RebalancePanel.tsx  WithdrawForm.tsx
src/config/: contracts.ts
src/contexts/: WalletContext.tsx
src/hooks/: useBasketManager.ts  useEVMWallet.ts  usePVMEngine.ts
src/layouts/: Layout.tsx
xcm/: sovereign.ts
(+13 files in other folders)
