# =============================================================================
# TeleBasket PVM Engine - Rust Dependencies
# =============================================================================
# IMPORTANT: polkatool version must match on-chain PolkaVM runtime.
# Use polkatool v0.26.0 for Polkadot Hub TestNet (chain 420420417)
# =============================================================================

[package]
name = "tele-basket-pvm"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84"
description = "TeleBasket PVM Engine - On-chain allocation optimization for cross-chain DeFi baskets"

[[bin]]
name = "contract"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1

[dependencies]
polkavm-derive = { version = "0.26" }
uapi = { package = "pallet-revive-uapi", version = "0.10.1", default-features = false }
